# gnuradioproject

./: .gitignore  .~lock.draftreport.odt#  .~lock.draftreport2.odt#  README.md  draftreport.odt  draftreport2.odt  untitled.cpp
ProjectProposal/: EPFLheader.sty  ProjectProposal.tex  TCLsem.cls  a4tcl.sty  tcl.clo
Report/: appendix_bytes.tex  communicationchain.tex  conclusion.tex  examples.tex  gnuradio.tex  introduction.tex  issues.tex  main.tex  packets.tex  references.tex  template_epfl.tex
Trash/gr-test/: MANIFEST.md
Trash/grc_ofdm_examples/: rx_ofdm.grc  rx_ofdm.py  tx_ofdm.py
Trash/grc_others/: tagged_stream_demux_example.grc  tagged_stream_demux_example.py
Tutorial/: draftreport.odt  multiply_test.grc  top_block.py  tut2.py  tutorial_two.grc
TxRxSimulation/: packet_blocks.py  packetizer.py  test_corr_and_sync.py  tx_rx_sim.py  txrx.grc  txrx_packet_blocks.grc  txrx_packetizer.grc  txrx_packets.grc  txrx_packets_bipre.grc  txrx_packets_pre.grc  txrx_packets_pre_tagged.grc  txrx_packets_pre_tagged_fec.grc  txrx_packets_preamble_double.grc  txrx_packets_tagged_header_payload_demux.grc  txrx_simple_qpsk.grc
gr-packetizer/: CMakeLists.txt  MANIFEST.md
gr-packetizer/docs/: README.packetizer
gr-packetizer/examples/: README  basic_encdec.grc  basic_encdec.py  chain_custom.grc  chain_custom.py  chain_custom_no_agc.grc  chain_rx_debug.py  chain_rx_debug_b.grc  chain_rx_debug_differential.grc  custom_chain.grc  custom_chain.py  custom_encdec.grc  encdec_basic.grc  encdec_basic_differential.grc  encdec_custom.grc  encdec_custom.py  encdec_custom_fec.grc  endec_basic.py  test_corr_est.grc  test_corr_est.py  test_corr_est_orig.grc  test_fec.grc  test_mapping.grc  test_mapping.py  test_soft_decoder.grc  test_tagged_stream_fix.grc  test_tagged_stream_fix.py  test_time_phase_sync.grc  test_whitener.grc  whitener.grc  whitener.py
gr-packetizer/grc/: CMakeLists.txt  packetizer_corr_est_cc.xml  packetizer_message_order_check.xml  packetizer_message_sequence_checker.xml  packetizer_packet_decoder.xml  packetizer_packet_encoder.xml  packetizer_packet_encoder_bc.xml  packetizer_preamble_header_payload_demux.xml  packetizer_pulseshape_vector.xml  packetizer_tagged_stream_fix.xml  packetizer_tagged_whitener.xml
gr-packetizer/lib/: CMakeLists.txt  corr_est_cc_impl.cc  corr_est_cc_impl.h  message_order_check_impl.cc  message_order_check_impl.h  message_sequence_checker_impl.cc  message_sequence_checker_impl.h  packet_encoder_impl.cc  packet_encoder_impl.h  preamble_header_payload_demux_impl.cc  preamble_header_payload_demux_impl.h  qa_packetizer.h  tagged_whitener_impl.cc  tagged_whitener_impl.h  whitener.cc
gr-packetizer/python/: CMakeLists.txt  __init__.py  packet_decoder.py  pulseshape_vector.py  qa_corr_est_cc.py  qa_message_order_check.py  qa_message_sequence_checker.py  qa_packet_encoder.py  qa_packet_encoder_bc.py  qa_packet_encoder_py_bc (copy).py  qa_preamble_header_payload_demux.py  qa_pulseshape_vector.py  qa_tagged_whitener.py  tagged_stream_fix.py
gr-packetizer/swig/: CMakeLists.txt  packetizer_swig.i
gr-packetizr/: CMakeLists.txt  MANIFEST.md
gr-packetizr/docs/: README.packetizr
gr-packetizr/grc/: CMakeLists.txt  packetizr_corr_est_cc.xml  packetizr_modulate_vector.xml  packetizr_packet_decoder.xml  packetizr_packet_encoder.xml  packetizr_preamble_header_payload_demux.xml  packetizr_tagged_stream_demux.xml  packetizr_tagged_stream_demux_xx.bak.xml  packetizr_tagged_stream_demux_xx.xml  packetizr_tagged_whiten.xml  packetizr_tagged_whitener.xml
gr-packetizr/lib/: CMakeLists.txt  corr_est_cc_impl.cc  corr_est_cc_impl.h  modulate_vector.cc  packet_encoder_impl.cc  packet_encoder_impl.h  preamble_header_payload_demux_impl.cc  preamble_header_payload_demux_impl.h  qa_packetizr.cc  qa_packetizr.h  tagged_stream_demux_xx_impl.cc  tagged_stream_demux_xx_impl.h  tagged_whiten_impl.cc  tagged_whiten_impl.h  tagged_whitener_impl.cc  tagged_whitener_impl.h  test_packetizr.cc  whitener.cc
gr-packetizr/python/: CMakeLists.txt  __init__.py  modulate_vector_cc.py  packet_decoder.py  qa_corr_est_cc.py  qa_packet_decoder.py  qa_packet_encoder.py  qa_preamble_header_payload_demux.py  qa_tagged_stream_demux_xx.py  qa_tagged_whiten.py  qa_tagged_whitener.py
gr-packetizr/swig/: CMakeLists.txt  packetizr_swig.i
gr-test/: CMakeLists.txt
gr-test/grc/: CMakeLists.txt  test_square_ff.xml  test_test.xml
gr-test/lib/: CMakeLists.txt  qa_test.cc  qa_test.h  square_ff_impl.cc  square_ff_impl.h  test_impl.cc
gr-test/python/: CMakeLists.txt  qa_square_ff.py  qa_test.py
gr-test/swig/: test_swig.i
gr-tutorial/grc/: CMakeLists.txt
gr-tutorial/lib/: CMakeLists.txt  my_qpsk_demod_cb_impl.cc  qa_my_qpsk_demod_cb.h
grc_others/: debug_env.grc  debug_env.py
grc_txrx/: basic_chain.grc  basic_chain.py  basic_chain_custom.grc  basic_chain_custom2.py  basic_chain_custom3.py  basic_chain_custom_goodsync.grc  basic_chain_custom_goodsync.py  basic_chain_custom_othersync.grc  basic_chain_custom_othersync.py  basic_chain_custom_othersync_betterpreamble.grc  basic_chain_custom_othersync_betterpreamble.py  basic_chain_custom_othersync_uglypreamble_working.grc  basic_enc_dec.grc  basic_enc_dec_custom.grc  basic_enc_dec_repacked.grc  basic_enc_dec_repacked_bpsk_qpsk.grc  basic_enc_dec_repacked_qpsk.grc  basic_encdec.py  basic_encdec_fec.grc  basic_encdec_fec.py  basic_encdec_soft.py  chain_custom.grc  chain_custom.py  chain_custom_2.grc  chain_custom_3.grc  chain_custom_no_tracking.grc  chain_custom_tracking.grc  chain_nopackets.grc  chain_nopackets2.grc  chain_nopackets3.grc  chain_rx_debug.grc  chain_rx_debug.py  chain_semibasic.grc  custom_encdec_1.grc  custom_encdec_2_soft.grc  custom_encdec_3_crc.grc  custom_encdec_3_fec.grc  custom_encdec_crc.py  custom_encdec_fec.py  custom_encdec_soft.py  (+39 more)
grc_txrx/Old/: custom_encdec_1.grc  custom_encdec_4_soft_fec.grc  test_pulseshape.grc  test_pulseshape.py
grc_txrx/development/: advanced_chain.grc  basic_chain.py  basic_chain_custom2.py  basic_chain_custom_goodsync.grc  basic_chain_custom_goodsync.py  basic_chain_custom_othersync.grc  bb.grc  (+20 more)
(+108 files in other folders)
